<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="95dp"
    android:layout_gravity="center"
    card_view:cardCornerRadius="4dp"
    card_view:cardElevation="4dp"
    card_view:cardUseCompatPadding="true">


    <TextView
        android:id="@+id/tvName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginStart="8dp"
        android:textStyle="bold"
        android:textSize="20sp"
        tools:text="@string/name"/>

    <TextView
        android:id="@+id/tvAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="33dp"
        android:layout_marginStart="8dp"
        android:textStyle="bold"
        android:textSize="13sp"
        tools:text="@string/address"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="52dp"
        android:layout_marginStart="8dp">

        <TextView
            android:id="@+id/tvLatitude"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            tools:text="@string/latitude"/>

        <TextView
            android:id="@+id/tvComma"
            android:text="@string/comma"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"/>

        <TextView
            android:id="@+id/tvLongitude"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="7dp"
            tools:text="@string/longitude"
            android:textSize="12sp"/>

    </LinearLayout>


</com.google.android.material.card.MaterialCardView>