<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bathing_site"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.BathingSitesFragment">

    <com.google.android.material.progressindicator.LinearProgressIndicator
        android:id="@+id/processBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/fetchingbathingsites"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:visibility="invisible"
        android:indeterminate="true"/>

    <ImageView
        android:id="@+id/ivBathingSign"
        android:layout_width="174dp"
        android:layout_height="168dp"
        android:contentDescription="@string/bathingsign"
        android:src="@drawable/bathing_sign"
        app:layout_constraintBottom_toTopOf="@+id/tvBathingSites"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/processBar"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/tvBathingSites"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/s_bathing_sites"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivBathingSign" />


</androidx.constraintlayout.widget.ConstraintLayout>